--- a/templates/moneybox.html
+++ b/templates/moneybox.html
@@ -7,15 +7,9 @@
         <h5>Dodaj do skarbonki</h5>
         {{ form.as_p }}
         <br>
-        <button class="btn waves-effect waves-light" type="Submit">Dodaj
+        <button class="btn waves-effect waves-light light-blue accent-2" type="Submit">Dodaj
         <i class="material-icons right">send</i>
         </button>
     </div>
 </form>
-<div class="container">
-    {% for piggybank in piggybank_display %}
-        <h4>{{ piggybank.wolumen }}</h4>
-        <p>{{ piggybank.date }}</p>
-    {% endfor %}
-</div>
 {% endblock %}
