--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,21 +1,30 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 <div class="container">
-    <div class="col s12 m8 offset-m2 l6 offset-l3">
+    <div class="col s10 m10">
             <div class="card-panel blue lighten-4">
               <div class="row valign-wrapper">
                 <div class="col s2">
-                  <img class="circle" src="{{ user.profile.img.url }}" alt="Avatar">
+                  <img class="circle" src="{{ user.profile.image.url }}" alt="Avatar" width="200" height="200">
                 </div>
-                <div class="col s10">
+                <div class="col s11">
                   <span class="black-text">
-                      <h4>{{ user.username }}</h4>
-                      <p> {{ user.email }}</p>
+                      <h5>{{ user.username }}</h5>
+                      <p>{{ user.email }}</p>
                   </span>
+                    <form method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <br/>
+                        <button class="btn waves-effect waves-light" type="Submit">Dodaj
+                            <i class="material-icons right">send</i>
+                        </button>
+                    </form>
                 </div>
               </div>
             </div>
-          </div>
+    </div>
 </div>
 {% endblock %}
