--- a/templates/obligations_history.html
+++ b/templates/obligations_history.html
@@ -26,7 +26,7 @@
                     {% for result in data %}
                     <tr>
                         <td>{{ result.date }}</td>
-                        <td>{{ result.wolumen }} zł</td>
+                        <td>{{ result.suma }} zł</td>
                     {% endfor %}
                     </tr>
                     </tbody>
