--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,11 +14,11 @@
                       <h5>{{ user.username }}</h5>
                       <p>{{ user.email }}</p>
                   </span>
-                    <form method="POST" enctype="multipart/form-data">
+                    <form action="{% url 'accounts:profile' %}" method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         {{ form.as_p }}
                         <br/>
-                        <button class="btn waves-effect waves-light" type="Submit">Dodaj
+                        <button class="btn waves-effect waves-light" type="Submit">Zapisz
                             <i class="material-icons right">send</i>
                         </button>
                     </form>
